[package]
name = "obvs"
version = "0.1.0"
edition = "2021"

[dependencies]
one_collect = { path = "../one-collect/one_collect" }
selfish = { path = "../selfish" }
beaubourg = { path = "../beaubourg" }

# Questionable dependencies below!
anyhow = "1.0"
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3"
