[package]
name = "otap-df-metrics-sdk"
description = "OTAP-native metrics SDK with codegen-driven Arrow encoding"
version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
otap-df-config = { workspace = true }
otap-df-pdata = { workspace = true }

arrow = { workspace = true }
arrow-array = { workspace = true }
arrow-schema = { workspace = true }
axum = { workspace = true }
parking_lot = { workspace = true }
tokio = { workspace = true }

[lints]
workspace = true
