[package]
name = "otap-df-ratelimit"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]
thiserror.workspace = true
async-trait.workspace = true
serde.workspace = true
otap-df-engine = { path = "../engine" }

[lints]
workspace = true

[features]
bench = []
