[package]
name = "expohisto-mapping-gen"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Lookup table generation for exponential histogram mapping"

[dependencies]
# Pin az < 1.3 and rug < 1.28 for MSRV compatibility
# (az 1.3 and rug 1.28 use edition 2024).
az = ">=1, <1.3"
rug = ">=1.24, <1.28"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "table_gen"
harness = false

[lints.rust]
# float64.rs is shared via #[path] from the main crate, which defines
# `feature = "std"`, `feature = "logarithm"`, and `feature = "boundary"`
# cfg conditions.
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(feature, values("std", "logarithm", "boundary"))'] }
